--- a/choose_protocol.ipynb
+++ b/choose_protocol.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,67 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                      sentence       verb  \\\n",
-      "0                I think [AGENT] is the [ROLE]   ESTIMATE   \n",
-      "1       I'm pretty sure [AGENT] is the [ROLE].   ESTIMATE   \n",
-      "2                  [AGENT] must be the [ROLE].   ESTIMATE   \n",
-      "3               [AGENT] seems like the [ROLE].   ESTIMATE   \n",
-      "4             I suspect [AGENT] is the [ROLE].   ESTIMATE   \n",
-      "..                                         ...        ...   \n",
-      "101       I’m not on the same page as [AGENT].  NOT AGREE   \n",
-      "102         I’m not in agreement with [AGENT].  NOT AGREE   \n",
-      "103       I don't support [AGENT]'s viewpoint.  NOT AGREE   \n",
-      "104            I don't back [AGENT]'s opinion.  NOT AGREE   \n",
-      "105  I don't align with [AGENT]'s perspective.  NOT AGREE   \n",
-      "\n",
-      "                                              embedded   cos_sim  \n",
-      "0    [-0.025435129180550575, 0.02359001524746418, -...  0.456222  \n",
-      "1    [-0.026453986763954163, 0.015379550866782665, ...  0.454277  \n",
-      "2    [-0.03527791053056717, 0.05349048972129822, -0...  0.474992  \n",
-      "3    [-0.039609190076589584, 0.03394649922847748, -...  0.465897  \n",
-      "4    [-0.024884728714823723, 0.03168796747922897, -...  0.441513  \n",
-      "..                                                 ...       ...  \n",
-      "101  [-0.02111106365919113, 0.023209236562252045, 0...  0.363315  \n",
-      "102  [-0.027951616793870926, 0.04496261104941368, 0...  0.346761  \n",
-      "103  [-0.0039258478209376335, 0.013852584175765514,...  0.294129  \n",
-      "104  [0.02674938552081585, 0.006069068796932697, -0...  0.247829  \n",
-      "105  [-0.02435404062271118, 0.0319083034992218, 0.0...  0.313741  \n",
-      "\n",
-      "[106 rows x 4 columns]\n",
-      "                                      sentence       verb  \\\n",
-      "0                I think [AGENT] is the [ROLE]   ESTIMATE   \n",
-      "1       I'm pretty sure [AGENT] is the [ROLE].   ESTIMATE   \n",
-      "2                  [AGENT] must be the [ROLE].   ESTIMATE   \n",
-      "3               [AGENT] seems like the [ROLE].   ESTIMATE   \n",
-      "4             I suspect [AGENT] is the [ROLE].   ESTIMATE   \n",
-      "..                                         ...        ...   \n",
-      "101       I’m not on the same page as [AGENT].  NOT AGREE   \n",
-      "102         I’m not in agreement with [AGENT].  NOT AGREE   \n",
-      "103       I don't support [AGENT]'s viewpoint.  NOT AGREE   \n",
-      "104            I don't back [AGENT]'s opinion.  NOT AGREE   \n",
-      "105  I don't align with [AGENT]'s perspective.  NOT AGREE   \n",
-      "\n",
-      "                                              embedded   cos_sim  \n",
-      "0    [-0.025435129180550575, 0.02359001524746418, -...  0.496425  \n",
-      "1    [-0.026453986763954163, 0.015379550866782665, ...  0.479941  \n",
-      "2    [-0.03527791053056717, 0.05349048972129822, -0...  0.516844  \n",
-      "3    [-0.039609190076589584, 0.03394649922847748, -...  0.517198  \n",
-      "4    [-0.024884728714823723, 0.03168796747922897, -...  0.458553  \n",
-      "..                                                 ...       ...  \n",
-      "101  [-0.02111106365919113, 0.023209236562252045, 0...  0.358716  \n",
-      "102  [-0.027951616793870926, 0.04496261104941368, 0...  0.366144  \n",
-      "103  [-0.0039258478209376335, 0.013852584175765514,...  0.350146  \n",
-      "104  [0.02674938552081585, 0.006069068796932697, -0...  0.289402  \n",
-      "105  [-0.02435404062271118, 0.0319083034992218, 0.0...  0.332835  \n",
-      "\n",
-      "[106 rows x 4 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'ruizido' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m comment \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAgent[00]を占ったら黒だったよ。Agent[01]を占ったら白だったよ。\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m vector \u001b[38;5;129;01min\u001b[39;00m to_vectors(talker, comment):\n\u001b[0;32m----> 6\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mruizido\u001b[49m(df, vector))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ruizido' is not defined"
      ]
     }
    ],
@@ -131,6 +91,13 @@
     "for vector in to_vectors(talker, comment):\n",
     "        print(ruizido(df, vector))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
