--- a/protocols.ipynb
+++ b/protocols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2844,6 +2844,160 @@
    "outputs": [],
    "source": [
     "Df_all.to_csv(\"embedded_all.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>verb</th>\n",
+       "      <th>embedded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I think Agent[00] is the VILLAGER</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>[-0.03160595  0.000946   -0.01541849 ... -0.02...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>I think Agent[00] is the SEER</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>[-0.02739691 -0.01148984  0.00606947 ... -0.02...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>I think Agent[00] is the MEDIUM</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>[-0.00679811 -0.00681847  0.03310315 ... -0.05...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>I think Agent[00] is the BODYGUARD</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>[-0.00320411  0.00923154  0.00552738 ... -0.03...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>I think Agent[00] is the WEREWOLF</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>[-1.73706915e-02  2.38522375e-03  9.77769867e-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1160</th>\n",
+       "      <td>1160</td>\n",
+       "      <td>I don't align with Agent[00]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>[-0.03167816  0.02322682  0.02186138 ...  0.01...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>1161</td>\n",
+       "      <td>I don't align with Agent[01]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>[-0.03364712  0.02286795  0.023458   ...  0.01...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>1162</td>\n",
+       "      <td>I don't align with Agent[02]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>[-0.03010359  0.01959972  0.01731872 ...  0.01...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1163</th>\n",
+       "      <td>1163</td>\n",
+       "      <td>I don't align with Agent[03]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>[-0.03203132  0.02066218  0.02420709 ...  0.02...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1164</th>\n",
+       "      <td>1164</td>\n",
+       "      <td>I don't align with Agent[04]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>[-0.03008826  0.02626443  0.02080779 ...  0.01...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1165 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                     sentence       verb  \\\n",
+       "0              0            I think Agent[00] is the VILLAGER   ESTIMATE   \n",
+       "1              1                I think Agent[00] is the SEER   ESTIMATE   \n",
+       "2              2              I think Agent[00] is the MEDIUM   ESTIMATE   \n",
+       "3              3           I think Agent[00] is the BODYGUARD   ESTIMATE   \n",
+       "4              4            I think Agent[00] is the WEREWOLF   ESTIMATE   \n",
+       "...          ...                                          ...        ...   \n",
+       "1160        1160  I don't align with Agent[00]'s perspective.  NOT AGREE   \n",
+       "1161        1161  I don't align with Agent[01]'s perspective.  NOT AGREE   \n",
+       "1162        1162  I don't align with Agent[02]'s perspective.  NOT AGREE   \n",
+       "1163        1163  I don't align with Agent[03]'s perspective.  NOT AGREE   \n",
+       "1164        1164  I don't align with Agent[04]'s perspective.  NOT AGREE   \n",
+       "\n",
+       "                                               embedded  \n",
+       "0     [-0.03160595  0.000946   -0.01541849 ... -0.02...  \n",
+       "1     [-0.02739691 -0.01148984  0.00606947 ... -0.02...  \n",
+       "2     [-0.00679811 -0.00681847  0.03310315 ... -0.05...  \n",
+       "3     [-0.00320411  0.00923154  0.00552738 ... -0.03...  \n",
+       "4     [-1.73706915e-02  2.38522375e-03  9.77769867e-...  \n",
+       "...                                                 ...  \n",
+       "1160  [-0.03167816  0.02322682  0.02186138 ...  0.01...  \n",
+       "1161  [-0.03364712  0.02286795  0.023458   ...  0.01...  \n",
+       "1162  [-0.03010359  0.01959972  0.01731872 ...  0.01...  \n",
+       "1163  [-0.03203132  0.02066218  0.02420709 ...  0.02...  \n",
+       "1164  [-0.03008826  0.02626443  0.02080779 ...  0.01...  \n",
+       "\n",
+       "[1165 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"embedded_all.csv\")"
    ]
   },
   {
