--- a/send.ipynb
+++ b/send.ipynb
@@ -20,10 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class A:\n",
+    "class Send:\n",
     "    def __init__(self, flag):\n",
-    "        self.flag = flag\n",
+    "        self.talker = None #元情報から抽出\n",
+    "        self.flag = None # gptからの出力\n",
     "        self.sentences = []\n",
+    "\n",
     "    def append(self, verb, agent, role, team):\n",
     "        sentence = Sentence(verb, agent, role, team)\n",
     "        self.sentences.append(sentence)"
