--- a/protocols.ipynb
+++ b/protocols.ipynb
@@ -1118,7 +1118,7 @@
     "\n",
     "talker = \"Agent[00]\"\n",
     "sentence = \"Agent[00]を占ったら黒だったよ。Agent[01]を占ったら白だったよ。\"\n",
-    "brokendown = eval(breakdown.get_list(talker, sentence)) # outputがstrなことがあるから\n",
+    "brokendown = eval(breakdown.get_list(talker, sentence)[0]) # outputがstrなことがあるから\n",
     "[get_embedding(sentense) for sentense in brokendown]"
    ]
   }
