--- a/similarity_pick.ipynb
+++ b/similarity_pick.ipynb
@@ -47,8 +47,8 @@
     "\n",
     "talker = \"Agent[03]\"\n",
     "sentence = \"Agent[00]を占ったら黒だったよ。Agent[01]を占ったら白だったよ。\"\n",
-    "brokendown = eval(breakdown.get_list(talker, sentence)) # outputがstrなことがあるから\n",
-    "[g_e(sentence) for sentence in brokendown]"
+    "brokendown = (eval(breakdown.get_list(talker, sentence)[0]), eval(breakdown.get_list(talker, sentence)[1])) # outputがstrなことがあるから\n",
+    "[g_e(sentence) for sentence in brokendown[0]]"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "\n",
     "\n",
     "sentencedf = pd.DataFrame(\n",
-    "    {'text': brokendown, 'vector': [g_e(sentence) for sentence in brokendown]}\n",
+    "    {'text': brokendown[0], 'vector': [g_e(sentence) for sentence in brokendown[0]]}\n",
     "    )\n",
     "print(sentencedf)"
    ]
