--- a/make_csv.ipynb
+++ b/make_csv.ipynb
@@ -1,8 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +390,7 @@
        "11                                        NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +596,7 @@
        "[1165 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,180 +608,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence</th>\n",
-       "      <th>Agent</th>\n",
-       "      <th>Role</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>embedded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I think Agent[00] is the VILLAGER</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>VILLAGER</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03160595  0.000946   -0.01541849 ... -0.02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I think Agent[00] is the SEER</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>SEER</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.02739691 -0.01148984  0.00606947 ... -0.02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I think Agent[00] is the MEDIUM</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>MEDIUM</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.00679811 -0.00681847  0.03310315 ... -0.05...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>I think Agent[00] is the BODYGUARD</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>BODYGUARD</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.00320411  0.00923154  0.00552738 ... -0.03...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I think Agent[00] is the WEREWOLF</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>WEREWOLF</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-1.73706915e-02  2.38522375e-03  9.77769867e-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1100</th>\n",
-       "      <td>I don't align with Agent[00]'s perspective.</td>\n",
-       "      <td>Agent[00]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03167816  0.02322682  0.02186138 ...  0.01...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1101</th>\n",
-       "      <td>I don't align with Agent[01]'s perspective.</td>\n",
-       "      <td>Agent[01]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03364712  0.02286795  0.023458   ...  0.01...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1102</th>\n",
-       "      <td>I don't align with Agent[02]'s perspective.</td>\n",
-       "      <td>Agent[02]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03010359  0.01959972  0.01731872 ...  0.01...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1103</th>\n",
-       "      <td>I don't align with Agent[03]'s perspective.</td>\n",
-       "      <td>Agent[03]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03203132  0.02066218  0.02420709 ...  0.02...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1104</th>\n",
-       "      <td>I don't align with Agent[04]'s perspective.</td>\n",
-       "      <td>Agent[04]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[-0.03008826  0.02626443  0.02080779 ...  0.01...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1105 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         sentence      Agent       Role  Team  \\\n",
-       "0               I think Agent[00] is the VILLAGER  Agent[00]   VILLAGER  None   \n",
-       "1                   I think Agent[00] is the SEER  Agent[00]       SEER  None   \n",
-       "2                 I think Agent[00] is the MEDIUM  Agent[00]     MEDIUM  None   \n",
-       "3              I think Agent[00] is the BODYGUARD  Agent[00]  BODYGUARD  None   \n",
-       "4               I think Agent[00] is the WEREWOLF  Agent[00]   WEREWOLF  None   \n",
-       "...                                           ...        ...        ...   ...   \n",
-       "1100  I don't align with Agent[00]'s perspective.  Agent[00]       None  None   \n",
-       "1101  I don't align with Agent[01]'s perspective.  Agent[01]       None  None   \n",
-       "1102  I don't align with Agent[02]'s perspective.  Agent[02]       None  None   \n",
-       "1103  I don't align with Agent[03]'s perspective.  Agent[03]       None  None   \n",
-       "1104  I don't align with Agent[04]'s perspective.  Agent[04]       None  None   \n",
-       "\n",
-       "                                               embedded  \n",
-       "0     [-0.03160595  0.000946   -0.01541849 ... -0.02...  \n",
-       "1     [-0.02739691 -0.01148984  0.00606947 ... -0.02...  \n",
-       "2     [-0.00679811 -0.00681847  0.03310315 ... -0.05...  \n",
-       "3     [-0.00320411  0.00923154  0.00552738 ... -0.03...  \n",
-       "4     [-1.73706915e-02  2.38522375e-03  9.77769867e-...  \n",
-       "...                                                 ...  \n",
-       "1100  [-0.03167816  0.02322682  0.02186138 ...  0.01...  \n",
-       "1101  [-0.03364712  0.02286795  0.023458   ...  0.01...  \n",
-       "1102  [-0.03010359  0.01959972  0.01731872 ...  0.01...  \n",
-       "1103  [-0.03203132  0.02066218  0.02420709 ...  0.02...  \n",
-       "1104  [-0.03008826  0.02626443  0.02080779 ...  0.01...  \n",
-       "\n",
-       "[1105 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"embedded_all.csv\")\n",
-    "# dfのembeddedのカラムをDf_allと結合\n",
-    "df_new = pd.merge(Df_all, df).drop(columns=[\"verb\", \"Unnamed: 0\"])\n",
-    "df_new"
+    "Df_all[Df_all[\"sentence\"].str.contains('[TEAM]')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new.to_csv(\"new_embedded_all.csv\")"
+    "from embedding import get_embedding\n",
+    "Df_all[\"embedded\"] = Df_all[\"sentence\"].map(lambda x: get_embedding(x))\n"
    ]
   },
   {
