new_embedded_all.ipynb

--- a/make_csv.ipynb
+++ b/make_csv.ipynb
@@ -626,6 +626,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Df_all.to_csv(\"new_embedded_all.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
