--- a/send.ipynb
+++ b/send.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "class Send:\n",
-    "    def __init__(self, flag):\n",
-    "        self.talker = None #元情報から抽出\n",
+    "    def __init__(self, talker, flag, ):\n",
+    "        self.talker = talker #元情報から抽出\n",
     "        self.flag = None # gptからの出力\n",
     "        self.sentences = []\n",
     "\n",
