csvにVerbの列を追加、choose_protocol進めた

--- a/make_csv.ipynb
+++ b/make_csv.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "11                                        NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,6 +433,7 @@
     "                for y in Roles:\n",
     "                    ans = {} # 各sentenceの情報を入れる辞書\n",
     "                    ans[\"sentence\"] = original_sentence.replace('[AGENT]', x).replace('[ROLE]', y)\n",
+    "                    ans[\"Verb\"] = column\n",
     "                    ans[\"Agent\"] = x\n",
     "                    ans[\"Role\"] = y\n",
     "                    ans[\"Team\"] = None\n",
@@ -442,6 +443,7 @@
     "                for y in Teams:\n",
     "                    ans = {} # 各sentenceの情報を入れる辞書\n",
     "                    ans[\"sentence\"] = original_sentence.replace('[AGENT]', x).replace('[TEAM]', y)\n",
+    "                    ans[\"Verb\"] = column\n",
     "                    ans[\"Agent\"] = x\n",
     "                    ans[\"Role\"] = None\n",
     "                    ans[\"Team\"] = y\n",
@@ -450,6 +452,7 @@
     "            for x in Agents:\n",
     "                ans = {} # 各sentenceの情報を入れる辞書\n",
     "                ans[\"sentence\"] = original_sentence.replace('[AGENT]', x)\n",
+    "                ans[\"Verb\"] = column\n",
     "                ans[\"Agent\"] = x\n",
     "                ans[\"Role\"] = None\n",
     "                ans[\"Team\"] = None\n",
@@ -458,6 +461,7 @@
     "            for y in Roles:\n",
     "                ans = {} # 各sentenceの情報を入れる辞書\n",
     "                ans[\"sentence\"] = original_sentence.replace('[ROLE]', y)\n",
+    "                ans[\"Verb\"] = column\n",
     "                ans[\"Agent\"] = None\n",
     "                ans[\"Role\"] = y\n",
     "                ans[\"Team\"] = None\n",
@@ -466,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +495,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>sentence</th>\n",
+       "      <th>Verb</th>\n",
        "      <th>Agent</th>\n",
        "      <th>Role</th>\n",
        "      <th>Team</th>\n",
@@ -500,6 +505,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>I think Agent[00] is the VILLAGER</td>\n",
+       "      <td>ESTIMATE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>VILLAGER</td>\n",
        "      <td>None</td>\n",
@@ -507,6 +513,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>I think Agent[00] is the SEER</td>\n",
+       "      <td>ESTIMATE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>SEER</td>\n",
        "      <td>None</td>\n",
@@ -514,6 +521,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>I think Agent[00] is the MEDIUM</td>\n",
+       "      <td>ESTIMATE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>MEDIUM</td>\n",
        "      <td>None</td>\n",
@@ -521,6 +529,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>I think Agent[00] is the BODYGUARD</td>\n",
+       "      <td>ESTIMATE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>BODYGUARD</td>\n",
        "      <td>None</td>\n",
@@ -528,6 +537,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>I think Agent[00] is the WEREWOLF</td>\n",
+       "      <td>ESTIMATE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>WEREWOLF</td>\n",
        "      <td>None</td>\n",
@@ -538,10 +548,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1160</th>\n",
        "      <td>I don't align with Agent[00]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
        "      <td>Agent[00]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -549,6 +561,7 @@
        "    <tr>\n",
        "      <th>1161</th>\n",
        "      <td>I don't align with Agent[01]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
        "      <td>Agent[01]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -556,6 +569,7 @@
        "    <tr>\n",
        "      <th>1162</th>\n",
        "      <td>I don't align with Agent[02]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
        "      <td>Agent[02]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -563,6 +577,7 @@
        "    <tr>\n",
        "      <th>1163</th>\n",
        "      <td>I don't align with Agent[03]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
        "      <td>Agent[03]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -570,33 +585,47 @@
        "    <tr>\n",
        "      <th>1164</th>\n",
        "      <td>I don't align with Agent[04]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
        "      <td>Agent[04]</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1165 rows × 4 columns</p>\n",
+       "<p>1165 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         sentence      Agent       Role  Team\n",
-       "0               I think Agent[00] is the VILLAGER  Agent[00]   VILLAGER  None\n",
-       "1                   I think Agent[00] is the SEER  Agent[00]       SEER  None\n",
-       "2                 I think Agent[00] is the MEDIUM  Agent[00]     MEDIUM  None\n",
-       "3              I think Agent[00] is the BODYGUARD  Agent[00]  BODYGUARD  None\n",
-       "4               I think Agent[00] is the WEREWOLF  Agent[00]   WEREWOLF  None\n",
-       "...                                           ...        ...        ...   ...\n",
-       "1160  I don't align with Agent[00]'s perspective.  Agent[00]       None  None\n",
-       "1161  I don't align with Agent[01]'s perspective.  Agent[01]       None  None\n",
-       "1162  I don't align with Agent[02]'s perspective.  Agent[02]       None  None\n",
-       "1163  I don't align with Agent[03]'s perspective.  Agent[03]       None  None\n",
-       "1164  I don't align with Agent[04]'s perspective.  Agent[04]       None  None\n",
+       "                                         sentence       Verb      Agent  \\\n",
+       "0               I think Agent[00] is the VILLAGER   ESTIMATE  Agent[00]   \n",
+       "1                   I think Agent[00] is the SEER   ESTIMATE  Agent[00]   \n",
+       "2                 I think Agent[00] is the MEDIUM   ESTIMATE  Agent[00]   \n",
+       "3              I think Agent[00] is the BODYGUARD   ESTIMATE  Agent[00]   \n",
+       "4               I think Agent[00] is the WEREWOLF   ESTIMATE  Agent[00]   \n",
+       "...                                           ...        ...        ...   \n",
+       "1160  I don't align with Agent[00]'s perspective.  NOT AGREE  Agent[00]   \n",
+       "1161  I don't align with Agent[01]'s perspective.  NOT AGREE  Agent[01]   \n",
+       "1162  I don't align with Agent[02]'s perspective.  NOT AGREE  Agent[02]   \n",
+       "1163  I don't align with Agent[03]'s perspective.  NOT AGREE  Agent[03]   \n",
+       "1164  I don't align with Agent[04]'s perspective.  NOT AGREE  Agent[04]   \n",
        "\n",
-       "[1165 rows x 4 columns]"
+       "           Role  Team  \n",
+       "0      VILLAGER  None  \n",
+       "1          SEER  None  \n",
+       "2        MEDIUM  None  \n",
+       "3     BODYGUARD  None  \n",
+       "4      WEREWOLF  None  \n",
+       "...         ...   ...  \n",
+       "1160       None  None  \n",
+       "1161       None  None  \n",
+       "1162       None  None  \n",
+       "1163       None  None  \n",
+       "1164       None  None  \n",
+       "\n",
+       "[1165 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,16 +637,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>Verb</th>\n",
+       "      <th>Agent</th>\n",
+       "      <th>Role</th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I think Agent[00] is the VILLAGER</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>VILLAGER</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I think Agent[00] is the SEER</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>SEER</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I think Agent[00] is the MEDIUM</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I think Agent[00] is the BODYGUARD</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>BODYGUARD</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I think Agent[00] is the WEREWOLF</td>\n",
+       "      <td>ESTIMATE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>WEREWOLF</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1160</th>\n",
+       "      <td>I don't align with Agent[00]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>Agent[00]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>I don't align with Agent[01]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>Agent[01]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>I don't align with Agent[02]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>Agent[02]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1163</th>\n",
+       "      <td>I don't align with Agent[03]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>Agent[03]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1164</th>\n",
+       "      <td>I don't align with Agent[04]'s perspective.</td>\n",
+       "      <td>NOT AGREE</td>\n",
+       "      <td>Agent[04]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1165 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         sentence       Verb      Agent  \\\n",
+       "0               I think Agent[00] is the VILLAGER   ESTIMATE  Agent[00]   \n",
+       "1                   I think Agent[00] is the SEER   ESTIMATE  Agent[00]   \n",
+       "2                 I think Agent[00] is the MEDIUM   ESTIMATE  Agent[00]   \n",
+       "3              I think Agent[00] is the BODYGUARD   ESTIMATE  Agent[00]   \n",
+       "4               I think Agent[00] is the WEREWOLF   ESTIMATE  Agent[00]   \n",
+       "...                                           ...        ...        ...   \n",
+       "1160  I don't align with Agent[00]'s perspective.  NOT AGREE  Agent[00]   \n",
+       "1161  I don't align with Agent[01]'s perspective.  NOT AGREE  Agent[01]   \n",
+       "1162  I don't align with Agent[02]'s perspective.  NOT AGREE  Agent[02]   \n",
+       "1163  I don't align with Agent[03]'s perspective.  NOT AGREE  Agent[03]   \n",
+       "1164  I don't align with Agent[04]'s perspective.  NOT AGREE  Agent[04]   \n",
+       "\n",
+       "           Role  Team  \n",
+       "0      VILLAGER  None  \n",
+       "1          SEER  None  \n",
+       "2        MEDIUM  None  \n",
+       "3     BODYGUARD  None  \n",
+       "4      WEREWOLF  None  \n",
+       "...         ...   ...  \n",
+       "1160       None  None  \n",
+       "1161       None  None  \n",
+       "1162       None  None  \n",
+       "1163       None  None  \n",
+       "1164       None  None  \n",
+       "\n",
+       "[1165 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Df_all[Df_all[\"sentence\"].str.contains('[TEAM]')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,11 +822,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Df_all.to_csv(\"new_embedded_all.csv\")"
+    "Df_all.to_csv(\"new_new_embedded_all.csv\")"
    ]
   },
   {
@@ -1003,7 +1189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
