--- a/choose_protocol.ipynb
+++ b/choose_protocol.ipynb
@@ -97,7 +97,7 @@
     "    \"\"\"\n",
     "    vector: 入力文の要素の一つをembedしたもの\n",
     "    \"\"\"\n",
-    "    similarity_list = []\n",
+    "    similarity_list = [] #一旦、類似度だけを格納しておくためのリスト\n",
     "    for i in df[\"embedded\"]:\n",
     "        similarity_list.append(cos_sim(i, vector))\n",
     "        \n",
