全体をクラスにまとめた

--- a/choose_protocol.ipynb
+++ b/choose_protocol.ipynb
@@ -57,7 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def to_vectors(talker, comment):\n",
     "    # 要素に分割\n",
     "    sentences = eval(breakdown.get_list(talker, comment)) [0]\n",
@@ -101,12 +100,12 @@
     "    for i in df[\"embedded\"]:\n",
     "        similarity_list.append(cos_sim(i, vector))\n",
     "        \n",
-    "    a = similarity_list.index(max(similarity_list))\n",
-    "    b = max(similarity_list)\n",
+    "    index = similarity_list.index(max(similarity_list))\n",
+    "    max_sim = max(similarity_list)\n",
     "    \n",
     "    \n",
     "    #最大の類似度と、その文のindexを返す\n",
-    "    return (b, a)"
+    "    return (max_sim, index)"
    ]
   },
   {
@@ -121,6 +120,8 @@
     "def infolist(df, vectorlist): #vectorlistはto_vectors(talker, comment)の返り値\n",
     "    a = []\n",
     "    for i in vectorlist:\n",
+    "        sentence = Sentence(verb, agent, role, team)\n",
+    "        \n",
     "        verb = df.loc[ruizido(df, i)[1], \"Verb\"]\n",
     "        agent = df.loc[ruizido(df, i)[1], \"Agent\"]\n",
     "        role = df.loc[ruizido(df, i)[1], \"Role\"]\n",
@@ -129,7 +130,6 @@
     "        \n",
     "        #a.append((verb, agent, role, team))\n",
     "        \n",
-    "        sentence = Sentence(verb, agent, role, team)\n",
     "        a.append(sentence)\n",
     "    \n",
     "    return a\n",
