--- a/send.ipynb
+++ b/send.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import breakdown # remarkを要素に分割/flag\n",
+    "import embedding # 文章をembedding\n",
+    "from embedding import get_embedding, cos_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_dataframe(csv):\n",
+    "    df = pd.read_csv(csv)\n",
+    "    df[\"embedded\"] = df[\"embedded\"].map(lambda x: eval(x))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframeの設定\n",
+    "df = prepare_dataframe(\"new_new_embedded_all.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,52 +58,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Send:\n",
-    "    def __init__(self, talker, flag, ):\n",
-    "        self.talker = talker #元情報から抽出\n",
-    "        self.flag = None # gptからの出力\n",
-    "        self.sentences = []\n",
+    "class Comment:\n",
+    "    def __init__(self, remark, talker):\n",
+    "        self.remark = remark\n",
+    "        self.talker = talker\n",
+    "        self.flag = None \n",
+    "        \n",
+    "    def remark_to_protocol(self):\n",
+    "        vectorlist = self.to_vectors(self.talker, self.remark)\n",
+    "        return self.infolist(vectorlist)\n",
     "\n",
-    "    def append(self, verb, agent, role, team):\n",
-    "        sentence = Sentence(verb, agent, role, team)\n",
-    "        self.sentences.append(sentence)"
+    "    def to_vectors(self, talker, comment):\n",
+    "        # 要素に分割\n",
+    "        return_from_gpt = breakdown.get_list(talker, comment)\n",
+    "        sentences = return_from_gpt[0]\n",
+    "        self.flag = return_from_gpt[1]\n",
+    "\n",
+    "        # 各要素をembeddingしたリスト\n",
+    "        return [get_embedding(sentence) for sentence in sentences]\n",
+    "    \n",
+    "    def ruizido(self, vector):\n",
+    "        \"\"\"\n",
+    "        vector: 入力文の要素の一つをembedしたもの\n",
+    "        \"\"\"\n",
+    "        similarity_list = [] #一旦、類似度だけを格納しておくためのリスト\n",
+    "        for i in df[\"embedded\"]:\n",
+    "            similarity_list.append(cos_sim(i, vector))\n",
+    "            \n",
+    "        index = similarity_list.index(max(similarity_list))\n",
+    "        max_sim = max(similarity_list)\n",
+    "        \n",
+    "        \n",
+    "        #最大の類似度と、その文のindexを返す\n",
+    "        return (max_sim, index)\n",
+    "\n",
+    "    #最終的なリストの作成\n",
+    "    #from send import Sentence\n",
+    "\n",
+    "    def infolist(self, vectorlist): #vectorlistはto_vectors(talker, comment)の返り値\n",
+    "        a = []\n",
+    "        for i in vectorlist:\n",
+    "            verb = df.loc[self.ruizido(i)[1], \"Verb\"]\n",
+    "            agent = df.loc[self.ruizido(i)[1], \"Agent\"]\n",
+    "            role = df.loc[self.ruizido(i)[1], \"Role\"]\n",
+    "            team = df.loc[self.ruizido(i)[1], \"Team\"]\n",
+    "            \n",
+    "            \n",
+    "            #a.append((verb, agent, role, team))\n",
+    "            sentence = Sentence(verb, agent, role, team)\n",
+    "            a.append(sentence)\n",
+    "        \n",
+    "        return a\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = A(flag = True)"
+    "comment1 = Comment(\"Agent[02]を占ったら黒だったよ。Agent[01]を占ったら白だったよ。\", \"Agent[00]\") \n",
+    "protocol_list = comment1.remark_to_protocol()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIVINED Agent[02] nan BLACK\n",
+      "DIVINED Agent[01] nan WHITE\n"
+     ]
+    }
+   ],
    "source": [
-    "a.append((verb, [agent]))"
+    "for protocol in protocol_list:\n",
+    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT SUSPECT Agent[00] nan nan\n",
+      "VOTE Agent[00] nan nan\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "(1, [(verb, [agent]), (verb, [agent]), ...])"
+    "comment1 = Comment(\"Agent[00]の言っていることは信じられない。今夜はAgent[00]に投票するよ。\", \"Agent[01]\") \n",
+    "protocol_list = comment1.remark_to_protocol()\n",
+    "for protocol in protocol_list:\n",
+    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
+    "print(comment1.flag)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
