Commentクラスの修正

--- a/send.ipynb
+++ b/send.ipynb
@@ -22,10 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd \n",
+    "\n",
     "def prepare_dataframe(csv):\n",
     "    df = pd.read_csv(csv)\n",
     "    df[\"embedded\"] = df[\"embedded\"].map(lambda x: eval(x))\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +71,18 @@
     "        self.flag = None \n",
     "        \n",
     "    def remark_to_protocol(self):\n",
-    "        vectorlist = self.to_vectors(self.talker, self.remark)\n",
-    "        return self.infolist(vectorlist)\n",
+    "        \"\"\"\n",
+    "        大元のメソッド. Commentのインスタンスに対して呼び出すと、remarkがプロトコルに変換され、flagが立つ\n",
+    "        \"\"\"\n",
+    "        vectorlist = self.remark_to_vectors(self.talker, self.remark)\n",
+    "        return self.vectors_to_protocols(vectorlist)\n",
     "\n",
-    "    def to_vectors(self, talker, comment):\n",
-    "        # 要素に分割\n",
-    "        return_from_gpt = breakdown.get_list(talker, comment)\n",
+    "    def remark_to_vectors(self, talker, remark):\n",
+    "        \"\"\"\n",
+    "        gptの処理を呼び出して、remarkを要素に分割し、各要素をembeddingしたリストを返す\n",
+    "        flagも設定する\n",
+    "        \"\"\"\n",
+    "        return_from_gpt = breakdown.get_list(talker, remark)\n",
     "        sentences = return_from_gpt[0]\n",
     "        self.flag = return_from_gpt[1]\n",
     "\n",
@@ -83,7 +91,7 @@
     "    \n",
     "    def ruizido(self, vector):\n",
     "        \"\"\"\n",
-    "        vector: 入力文の要素の一つをembedしたもの\n",
+    "        入力文の要素の一つをembedしたベクトルと、データフレームのembedded列のベクトルとの類似度を計算し、最も類似度が高い文のindexを返す\n",
     "        \"\"\"\n",
     "        similarity_list = [] #一旦、類似度だけを格納しておくためのリスト\n",
     "        for i in df[\"embedded\"]:\n",
@@ -99,8 +107,8 @@
     "    #最終的なリストの作成\n",
     "    #from send import Sentence\n",
     "\n",
-    "    def infolist(self, vectorlist): #vectorlistはto_vectors(talker, comment)の返り値\n",
-    "        a = []\n",
+    "    def vectors_to_protocols(self, vectorlist): #vectorlistはto_vectors(talker, comment)の返り値\n",
+    "        protocol_list = []\n",
     "        for i in vectorlist:\n",
     "            verb = df.loc[self.ruizido(i)[1], \"Verb\"]\n",
     "            agent = df.loc[self.ruizido(i)[1], \"Agent\"]\n",
@@ -108,17 +116,17 @@
     "            team = df.loc[self.ruizido(i)[1], \"Team\"]\n",
     "            \n",
     "            \n",
-    "            #a.append((verb, agent, role, team))\n",
+    "            \n",
     "            sentence = Sentence(verb, agent, role, team)\n",
-    "            a.append(sentence)\n",
+    "            protocol_list.append(sentence)\n",
     "        \n",
-    "        return a\n",
+    "        return protocol_list\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -136,18 +144,20 @@
      "output_type": "stream",
      "text": [
       "DIVINED Agent[02] nan BLACK\n",
-      "DIVINED Agent[01] nan WHITE\n"
+      "DIVINED Agent[01] nan WHITE\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "for protocol in protocol_list:\n",
-    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)"
+    "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
+    "print(comment1.flag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +171,7 @@
     }
    ],
    "source": [
-    "comment1 = Comment(\"Agent[00]の言っていることは信じられない。今夜はAgent[00]に投票するよ。\", \"Agent[01]\") \n",
+    "comment2 = Comment(\"Agent[00]の言っていることは信じられない。今夜はAgent[00]に投票するよ。\", \"Agent[01]\") \n",
     "protocol_list = comment1.remark_to_protocol()\n",
     "for protocol in protocol_list:\n",
     "    print(protocol.verb, protocol.agent, protocol.role, protocol.team)\n",
